--- a/index.html
+++ b/index.html
@@ -85,9 +85,8 @@
                   <a style="text-align: center;" href="javascript:void(0)" class="closebtn"
                      onclick="closeNav()">&times;</a>
                   <a href="index.html">الصفحة الرئيسية</a>
-                  <a href="#products_section2">منتجات تجميلية</a>
-                  <a href="#products_section3">منتجات منزلية</a>
-                  <a href="#products_section4">هــدايـا</a>
+                  <a href="#products_section2">هدايا</a>
+                  <a href="#products_section3">منتجات منوعة</a>
                   <div style="display: flex; justify-content: center; padding-right: 10px;" href="">
                      <a style="padding: 10px;" href="#" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
                      <a style="padding: 10px;" href="#" target="_blank"><i class="fa-brands fa-twitter"></i></a>
